syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.freeplane.plugin.grpc";
option java_outer_classname = "freeplane";
option objc_class_prefix = "FP";

package freeplane;

service Freeplane {
  rpc CreateChild (CreateChildRequest) returns (CreateChildResponse) {}
}

message CreateChildRequest {
  string name = 1;
}

message CreateChildResponse {
  string message = 1;
}
